sdk fix